# tero2

./: .gitignore  .tero2-night-state.json  2026-04-18-tui-redesign-unified.md  bugs.md  pyproject.toml  requirements.md
daemon/: com.tero.agent.plist
lib/: SORA_ARCHITECTURE.md  autonomous-agents-2026.md  autoresearch-paradigm.md  bug-finding-agents.md  context-assembly.md  detailed-roadmap.md  fault-tolerance.md  github-findings.md  gsd2-architecture.md  iterative-plan-hardening.md  mvp-roadmap.md  providers.md  system-prompts.md  voice-agent-telegram.md
specs/: mvp0-immortal-runner.md  mvp1-polish-and-build.md  mvp2-strategist.md
tero2/: __init__.py  architect_phase.py  builder.py  checkpoint.py  circuit_breaker.py  cli.py  coach_phase.py  config.py  config_writer.py  constants.py  context.py  context_assembly.py  disk_layer.py  errors.py  escalation.py  events.py  history.py  lock.py  notifier.py  persona.py  proc_utils.py  project_init.py  project_lock.py  reflexion.py  reviewer_review.md  runner.py  scout.md  scout_phase.py  state.py  stream_bus.py  stuck_detection.py  task_supervisor.py  telegram_input.py  triggers.py  usage_tracker.py  verifier.py
tests/: test_app_migration.py  test_app_stream_wiring.py  test_architect_failure_regression.py  test_audit3_halal_bugs.py  test_audit_32_bugs.py  test_audit_bugs.py  test_bugs.py  test_bugs_100_architect_plans_dir_recovery.py  test_bugs_101_builder_silent_success.py  test_bugs_102_execute_resume_no_summary.py  test_bugs_103_must_have_command_filter.py  test_bugs_104_runner_drops_tui_commands_silently.py  (+132 more)
(+104 files in other folders)
