[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tero2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
# Required for `tero2 go` command with interactive TUI dashboard
tui = [
    "textual>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
tero2 = "tero2.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["tero2"]

[tool.hatch.build]
include = [
    "tero2/**/*.py",
    "tero2/prompts/*.md",
]
